2002-09-13  Ghee Teo <ghee.teo@sun.com>
	* Fixes #92132 in modules/http-method.c which leaks file descriptor
	  on a bad page, error 405.

2002-09-09  Jody Goldberg <jody@gnome.org>

	* libgnomevfs/gnome-vfs-job.c (gnome_vfs_job_destroy_notify_result) :
	  Add an entry to OP_XFER.

=======
2002-09-04  Ian McKellar  <yakk@yakk.net>

        * libgnomevfs/gnome-vfs-configuration.c:
        (gnome_vfs_configuration_init):
        Fixed bug #90035. If g_get_home_dir returns NULL then don't load
        configuration from your home directory.

2002-09-04  Ian McKellar  <yakk@yakk.net>

	* LIMITATIONS: Document a few of GnomeVFS's limitations

2002-09-04  Alex Graveley  <alex@ximian.com>

	* configure.in: Version 2.0.4. Sigh.

2002-09-04  Alex Graveley  <alex@ximian.com>

	* configure.in: Version 2.0.3.

2002-09-03  Stanislav Brabec  <sbrabec@suse.cz>

	* configure.in: Added cs to ALL_LINGUAS.

2002-09-01  Seth Nickell  <snickell@stanford.edu>

	* modules/vfolder/applications-all-users.vfolder-info.in:
	* modules/vfolder/applications.vfolder-info-default.in:

	Don't include Evolution/Galeon explicitly in the top-level
	Applications. Don't show Favorites in the default menu.
	
=== merge in changes from gnome-vfs-2-0-vfolder-rewrite branch ===

2002-08-23  Alex Graveley  <alex@ximian.com>

	* modules/vfolder/vfolder-method.c (do_move): Remove fake CHANGED
	event for .directory files since it is really a bug in nautilus
	renames (see bug #89616).

2002-08-23  Alex Graveley  <alex@ximian.com>

	* modules/vfolder/vfolder-info.c (vfolder_info_emit_change): Call
	gnome_vfs_escape_path_string() on the path arg.  This fixes some
	strange behavior in nautilus when editing .desktop files with
	emacs, since emacs' temporary #files were being parsed as URI
	fragment identifiers.

	* modules/vfolder/vfolder-util.h (VFOLDER_URI_PARSE): Add debug
	printf with function name being called.  This allows us to trace
	the vfs method calls.

2002-08-23  Alex Graveley  <alex@ximian.com>
